[metadata]
name = pass-audit
version = attr: pass_audit.__version__
description = A pass extension for auditing your password repository.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
url = https://github.com/roddhjav/pass-audit
author = Alexandre Pujol
author_email = alexandre@pujol.io
project_urls =
    Documentation=https://github.com/roddhjav/pass-audit
    Source=https://github.com/roddhjav/pass-audit
    Issues=https://github.com/roddhjav/pass-audit/issues
    Changelog=https://github.com/roddhjav/pass-audit/blob/master/CHANGELOG.md
keywords =
    password-store
    password
    pass
    pass-extension
    audit
    password-audit
    haveibeenpwned
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security :: Cryptography

[options]
python_requires = >=3.6
zip_safe = True
packages =
    pass_audit
install_requires =
    requests
    zxcvbn
